--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
   <div class="card">
     <div class="logo">
-      <img src="https://cryptologos.cc/logos/scorechain-logo.png" alt="ScoreChain" onerror="this.style.display='none'">
+      <img src="assets/logos/scorechain.png" alt="ScoreChain">
       <span class="score-title">Score Financiero</span>
     </div>
 
@@ -97,23 +97,23 @@
 
     <div class="portfolio">
       <div class="portfolio-item">
-        <div class="asset-info"><img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC">Bitcoin</div>
+        <div class="asset-info"><img src="assets/logos/bitcoin.png" alt="BTC">Bitcoin</div>
         <div>40% <span class="risk-low">Riesgo: Bajo</span></div>
       </div>
       <div class="portfolio-item">
-        <div class="asset-info"><img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH">Ethereum</div>
+        <div class="asset-info"><img src="assets/logos/ethereum.png" alt="ETH">Ethereum</div>
         <div>25% <span class="risk-low">Riesgo: Bajo</span></div>
       </div>
       <div class="portfolio-item">
-        <div class="asset-info"><img src="https://cryptologos.cc/logos/solana-sol-logo.png" alt="SOL">Solana</div>
+        <div class="asset-info"><img src="assets/logos/solana.png" alt="SOL">Solana</div>
         <div>15% <span class="risk-mid">Riesgo: Moderado</span></div>
       </div>
       <div class="portfolio-item">
-        <div class="asset-info"><img src="https://cryptologos.cc/logos/usd-coin-usdc-logo.png" alt="USDC">USD Coin</div>
+        <div class="asset-info"><img src="assets/logos/usdc.png" alt="USDC">USD Coin</div>
         <div>10% <span class="risk-low">Riesgo: Bajo</span></div>
       </div>
       <div class="portfolio-item">
-        <div class="asset-info"><img src="https://cryptologos.cc/logos/binance-coin-bnb-logo.png" alt="BNB">BNB</div>
+        <div class="asset-info"><img src="assets/logos/bnb.png" alt="BNB">BNB</div>
         <div>10% <span class="risk-low">Riesgo: Bajo</span></div>
       </div>
     </div>
